--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>This is the first file in my new Git Repo.</p>
     <p>This line is here to show now merging works.</p>
     <p>This line is the fourth line.</p>
+    <p>This change happened in local Git.</p>
     <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px">
     </div>
   </body>
