--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="bluestyle.css">
+	  <meta charset="UTF-8">
+	  <title>Hello World!</title>
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel=stylesheet" href="blustyle.css">
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <div><img src="img_hello_world.jpg" alt="Hello World from Space"
-	      style="width:100%;max-width:960px"></div>
-    <p>This is the first file in my new Git Repo.</p>
-    <p>This line is here to show now merging works.</p>
-    <p>This line is the fourth line.</p>
-    <p>This change happened in local Git.</p>
-    <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px">
-    </div>
+	  <h1>Hello world!</h1>
+	  <div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
+	  <p> This is the first file in my new Git repo.</p>
+	  <p> This line is here to show how merging works.</p>
+	  <div><img src="img_hello_git.jpg" alt="hello Git" style="width:100%max-width:640px"></div>
+	  
   </body>
   </html>
